# OptiHPLCHandler

./: .flake8  .gitignore  .readthedocs.yml  .zenodo.json  LICENSE  README.md  conf.py  index.rst  make.bat  pyproject.toml  vision.md
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  pull_request.yml  release.yml  test.yml  test_and_lint.yml  test_workflow.yml
applications/: __init__.py  dev.ipynb  generate_basic_robustness_methods.py  ramp_method_gen_dev.ipynb  rampup_method_generator.py
applications/empower_implementation/: empower_tools.py
applications/method_generators/: add_isocratic_segment.py  add_isocratic_start.py  alter_strong_eluent_pct.py  alter_temperature.py  condense_gradient_table.py  ramp_method.py  rampup_method.py
examples/: column_eluent_screening_NOTFORUPLOAD.ipynb  example_basicusage.ipynb  example_column_eluent_screening.ipynb  example_components.ipynb  example_conditionset.ipynb  example_detectors.ipynb  example_enumerated_fields.ipynb  example_gradient_plot.ipynb  example_instrument_method.ipynb  example_linearity.ipynb  example_method_generators.ipynb  example_method_transfer.ipynb  example_methodset_method.ipynb  example_moving_and_saving_logins.ipynb  example_multivial.ipynb  example_robustness.ipynb  example_stability_study.ipynb  example_start.md  examples.md  ohh.ipynb
integration/: catalog-info.yaml
src/OptiHPLCHandler/: __init__.py  data_types.py  empower_api_core.py  empower_detector_module_method.py  empower_handler.py  empower_instrument_method.py  empower_methodset_method.py  empower_module_method.py  empower_session_method.py  factories.py  test.py
src/OptiHPLCHandler/applications/: __init__.py  generate_basic_robustness_methods.py  revert_method.py
src/OptiHPLCHandler/applications/empower_implementation/: empower_tools.py
src/OptiHPLCHandler/applications/method_converter/: method_converter.py
src/OptiHPLCHandler/applications/method_generators/: add_isocratic_segment.py  alter_strong_eluent_pct.py  alter_temperature.py  condense_gradient_table.py  ramp_method.py
src/OptiHPLCHandler/applications/sample_set_generator/: condition_set.py
src/OptiHPLCHandler/plotting/: gradient_plot.py  gradient_utils.py
src/OptiHPLCHandler/utils/: __init__.py  data_types.py  default_data.py  validate_gradient_table.py  validate_method_name.py
tests/: test_core_api.py  test_detector.py  test_instrument_method.py  test_method_set_method.py  test_module_method.py  test_proxy_api.py  test_utils.py
tests/application_tests/: test_empower_tools.py  test_method_converters.py  test_method_generators.py  test_test.py
tests/empower_method_examples/: ESAT_example.xml  FLD_example.xml  PDA_example.xml  RI_example.xml  TUV_example.xml  WFMA_example.xml  response-BSM-PDA-Acq.json  response-BSM-PDA-CM-Acq.json  response-BSM-PDA-CM-Acq_ChannelOn.json  response-BSM-TUV-Acq.json  response-BSM-TUV-CM-Acq.json  response-QSM-2489-Acq.json  response-QSM-FLR-PDA-Acq.json  response-QSM-PDA-Acq.json
tests/manualtests/: version_of_api.ipynb
tests/plotting_tests/: test_gradient_plot.py
